--- a/index.html
+++ b/index.html
@@ -3,28 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confetti Animation</title>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+    <title>Checkmark Animation</title>
     <style>
         body {
+            margin: 0;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             background-color: #f0f0f0;
-            margin: 0;
+            overflow: hidden;
+        }
+        .checkmark-container {
+            position: relative;
+            width: 100px;
+            height: 100px;
+        }
+        .checkmark {
+            position: absolute;
+            width: 0;
+            height: 0;
+            border: 5px solid green;
+            border-left: none;
+            border-top: none;
+            transform: rotate(45deg);
+            animation: popOut 0.5s ease-out forwards;
+        }
+        .burst {
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            background: radial-gradient(circle, rgba(255,255,255,0) 60%, rgba(0,0,0,0.2) 60%);
+            animation: burstOut 1s ease-out forwards;
+        }
+        @keyframes popOut {
+            0% {
+                width: 0;
+                height: 0;
+                opacity: 0;
+            }
+            50% {
+                width: 50px;
+                height: 50px;
+                opacity: 1;
+            }
+            100% {
+                width: 40px;
+                height: 70px;
+                opacity: 1;
+            }
+        }
+        @keyframes burstOut {
+            0% {
+                transform: scale(0);
+                opacity: 1;
+            }
+            100% {
+                transform: scale(3);
+                opacity: 0;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="checkmark-container">
+        <div class="burst"></div>
+        <div class="checkmark"></div>
+    </div>
     <script>
-        confetti({
-            particleCount: 200,
-            spread: 60,
-            startVelocity: 30,
-            decay: 0.9,
-            colors: ['#bb0000', '#ffffff']
-        });
+        // JavaScript to control the timing of the burst animation
+        const burst = document.querySelector('.burst');
+        setTimeout(() => {
+            burst.style.animation = 'burstOut 1s ease-out forwards';
+        }, 500); // Delay the burst animation to sync with checkmark pop-out
     </script>
 </body>
 </html>
